# QuarkEngine

./: README.md
Engine/: .gitignore  .uuid  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Engine/Core/: .uuid  Actor.cpp  Actor.h  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  Character.h  FPSCharacter.cpp  FPSCharacter.h  Game.cpp  Game.h  KeyBoradSystem.cpp  KeyBoradSystem.h  Makefile  Mesh.cpp  Mesh.h  Quark.cpp  Quark.h  QuarkGame.cpp  QuarkGame.h  Scene.cpp  Scene.h  Sense.cpp  Sense.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  cmake_install.cmake  engine  glad.c  main.cpp  untils.cpp  untils.h  widget.h
Engine/Core/Input/: MouseSystem.cpp  MouseSystem.h
Engine/Core/images/: .uuid
Engine/Core/models/: .uuid  block.quark  trigle.quark
Engine/Core/shaders/: .uuid  basic.fs  basic.vs
Engine/include/: .uuid
Engine/include/glm/: .uuid
Engine/include/glm/detail/: .uuid
Engine/include/glm/ext/: .uuid
Engine/include/glm/gtc/: .uuid
Engine/include/glm/gtx/: .uuid
Engine/include/glm/simd/: .uuid
